# roleperm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  roles.example.json  roles.json  run_tests.py
src/roleperm/: __init__.py  admin.py  admin_ui.py  admin_ui_ctk.py  admin_ui_qt.py  auth.py  config.py  constants.py  example_app.py  perm_storage.py  permissions.py  storage.py  storage_utils.py  ui.py  utils.py  validator.py  validators.py
src/roleperm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_config_login.py  test_permissions.py  test_recovery.py  test_utils.py  test_validator.py
