[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roleperm"
version = "0.1.1"
description = "Lightweight, JSON-backed role-permission library for Python desktop apps (stdlib-only)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "RolePerm Contributors"}]
keywords = ["roles", "permissions", "auth", "tkinter", "desktop", "json"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your-org/roleperm"
Repository = "https://github.com/your-org/roleperm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
