[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roleperm"
version = "0.2.0"
description = "Lightweight, JSON-backed role & permission enforcement for Python desktop apps (stdlib-only)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="roleperm contributors"}]
keywords = ["roles", "permissions", "auth", "tkinter", "json"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
