[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roleperm"
version = "0.2.4"
description = "Lightweight, JSON-backed role & permission enforcement for Python desktop apps (stdlib-only)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="roleperm contributors"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
